# RustOS

./: .gitignore
rust_os/: Cargo.toml
rust_os/.cargo/: config.toml
rust_os/src/: vga_buffer.rs
